<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btnTranslate"
        android:icon="@drawable/ic_home"
        android:title="@string/translate" />

    <item
        android:id="@+id/btnCamera"
        android:icon="@drawable/ic_camera_selector"
        android:title="@string/lens" />

    <item
        android:id="@+id/btnKeyboard"
        android:icon="@drawable/ic_keyboard_selector"
        android:title="@string/keyboard" />

    <item
        android:id="@+id/btnPhrasebook"
        android:icon="@drawable/ic_phrase_book_selector"
        android:title="@string/phrasebook" />

    <item
        android:id="@+id/btnFavorite"
        android:icon="@drawable/ic_fav_selector"
        android:title="@string/favourite" />

</menu>
