<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_half_up_rounded"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:orientation="vertical"
    android:id="@+id/quitBottomSheet"
    android:paddingHorizontal="@dimen/less_padding"
    android:paddingVertical="@dimen/padding_10">

    <FrameLayout
        android:id="@+id/nativeAdFrameLayoutQuit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/bg_native_ad"
        android:layout_margin="@dimen/padding_10"
        android:elevation="@dimen/less_padding"
        android:visibility="gone" />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quit"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/less_padding"
        android:gravity="center"
        android:text="@string/do_you_really_want_to_quit"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_10"
        android:layout_marginHorizontal="@dimen/padding_10"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_10"
            android:background="@drawable/bg_main_less_rounded"
            android:backgroundTint="@color/accent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="@dimen/padding_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/less_padding"
            android:background="@drawable/bg_main_less_rounded"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/padding_10"
            android:elevation="@dimen/padding_10"
            android:padding="@dimen/padding_10"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</LinearLayout>