<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_unlock_premium_dialog"
    android:elevation="@dimen/fab_padding"
    android:paddingStart="@dimen/fab_padding"
    android:paddingTop="@dimen/fab_padding"
    android:paddingEnd="@dimen/fab_padding"
    android:paddingBottom="@dimen/fab_padding">

    <ImageView
        android:id="@+id/ivUnlockHappy"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_unlock_happy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_padding"
        android:fontFamily="@font/gilroy_extrabold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/upgrade_or_watch_ad"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivUnlockHappy" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:fontFamily="@font/gilroy_light"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lineSpacingExtra="2dp"
        android:text="@string/your_are_using_limited_version_please_upgrade_or_watch_ad_to_use_camera_translate"
        android:textColor="@color/gray_700"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeading" />

    <LinearLayout
        android:id="@+id/actionsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_padding"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription">

        <TextView
            android:id="@+id/btnWatchAd"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/bg_unlock_secondary_button"
            android:fontFamily="@font/gilroy_extrabold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/watch_ad"
            android:textColor="@color/accent"
            android:textSize="@dimen/_12sdp" />

        <Space
            android:layout_width="@dimen/padding"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/btnUpgrade"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/bg_unlock_primary_button"
            android:fontFamily="@font/gilroy_extrabold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/upgrade"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
