<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_screen"
    tools:context="org.dslul.openboard.translator.pro.ExitActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_padding"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:srcCompat="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="@dimen/padding"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/fab_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_main_less_rounded" />

        <LinearLayout
            android:id="@+id/llLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            app:chainUseRtl="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/app_name"
                android:textColor="@color/accent"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvText1"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/llLogo"
            android:layout_marginHorizontal="@dimen/padding"
            android:fontFamily="@font/gilroy_light"
            android:maxLines="2"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/a_translator_is_a_reader_an_interpreter_and_a_creator_all_in_one"
            android:textColor="@color/gray_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <RatingBar
        android:id="@+id/exit_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/fab_padding"
        android:numStars="5"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clMain" />

    <FrameLayout
        android:id="@+id/nativeAdFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_main_less_rounded"
        app:layout_constraintTop_toBottomOf="@id/exit_rating"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tvQuit"
        android:layout_margin="@dimen/padding"/>


    <TextView
        android:id="@+id/tvQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quit"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/less_padding"
        android:gravity="center"
        android:text="@string/do_you_really_want_to_quit"
        android:textColor="@color/gray_700"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/llBtn"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <LinearLayout
        android:id="@+id/llBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_padding"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_10"
            android:layout_weight="1"
            android:background="@drawable/bg_main_less_rounded"
            android:backgroundTint="?attr/colorSecondary"
            android:elevation="@dimen/padding_10"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_10"
            android:layout_marginStart="@dimen/less_padding"
            android:layout_weight="1"
            android:background="@drawable/bg_main_less_rounded"
            android:backgroundTint="@color/accent"
            android:elevation="@dimen/padding_10"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>