<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/padding">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/llText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv">

        <ImageView
            android:id="@+id/btnSpeakText"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="@drawable/ripple_effect_transparent_rounded"
            android:backgroundTint="@color/accent"
            android:contentDescription="@string/todo"
            android:padding="@dimen/less_padding"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_speak_ic"
            app:tint="@color/gray_700" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:paddingHorizontal="@dimen/less_padding"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/get_pro"/>

        <ImageView
            android:id="@+id/btnCopyText"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="@drawable/ripple_effect_transparent_rounded"
            android:backgroundTint="@color/accent"
            android:contentDescription="@string/todo"
            android:padding="@dimen/padding"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_copy"
            app:tint="@color/gray_700" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translation"
        android:textSize="12sp"
        android:textColor="@color/gray_400"
        android:layout_marginTop="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@id/llText"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/llTranslation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/less_padding"
        app:layout_constraintTop_toBottomOf="@id/tv1">

        <ImageView
            android:id="@+id/btnSpeakTranslation"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="@drawable/ripple_effect_transparent_rounded"
            android:backgroundTint="@color/accent"
            android:contentDescription="@string/todo"
            android:padding="@dimen/less_padding"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_speak_ic"
            app:tint="@color/gray_700" />

        <TextView
            android:id="@+id/tvTranslation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/gray_400"
            android:paddingHorizontal="@dimen/less_padding"
            android:layout_weight="1"
            android:text="@string/get_pro"/>

        <ImageView
            android:id="@+id/btnCopyTranslation"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="@drawable/ripple_effect_transparent_rounded"
            android:backgroundTint="@color/accent"
            android:contentDescription="@string/todo"
            android:padding="@dimen/padding"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_copy"
            app:tint="@color/gray_700" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/llTranslation"
        android:layout_marginTop="@dimen/padding"
        android:background="?attr/colorSecondary"/>

</androidx.constraintlayout.widget.ConstraintLayout>